[gd_scene format=3 uid="uid://bqxvnxqjy8kq"]

[ext_resource type="Script" path="res://MainUI.gd" id="1_0k8xm"]

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0k8xm")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.25, 1)

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="LeftPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0

[node name="LeftPanelContainer" type="VBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="BaseTitle" type="Label" parent="MainContainer/LeftPanel/LeftPanelContainer"]
layout_mode = 2
text = "ACTIVE BASE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/LeftPanel/LeftPanelContainer"]
layout_mode = 2

[node name="BaseStatus" type="VBoxContainer" parent="MainContainer/LeftPanel/LeftPanelContainer"]
layout_mode = 2

[node name="PopulationLabel" type="Label" parent="MainContainer/LeftPanel/LeftPanelContainer/BaseStatus"]
layout_mode = 2
text = "Population: 0/50"

[node name="GuardsLabel" type="Label" parent="MainContainer/LeftPanel/LeftPanelContainer/BaseStatus"]
layout_mode = 2
text = "Guards: 0"

[node name="HealersLabel" type="Label" parent="MainContainer/LeftPanel/LeftPanelContainer/BaseStatus"]
layout_mode = 2
text = "Healers: 0"

[node name="WorkersLabel" type="Label" parent="MainContainer/LeftPanel/LeftPanelContainer/BaseStatus"]
layout_mode = 2
text = "Workers: 0"

[node name="RebelsLabel" type="Label" parent="MainContainer/LeftPanel/LeftPanelContainer/BaseStatus"]
layout_mode = 2
text = "Rebels: 0"

[node name="HSeparator2" type="HSeparator" parent="MainContainer/LeftPanel/LeftPanelContainer"]
layout_mode = 2

[node name="RaidWarning" type="Panel" parent="MainContainer/LeftPanel/LeftPanelContainer"]
layout_mode = 2
modulate = Color(1, 0.5, 0.5, 1)

[node name="RaidWarningContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/LeftPanelContainer/RaidWarning"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0

[node name="RaidTitle" type="Label" parent="MainContainer/LeftPanel/LeftPanelContainer/RaidWarning/RaidWarningContainer"]
layout_mode = 2
text = "⚠ RAID WARNING ⚠"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RaidTimer" type="Label" parent="MainContainer/LeftPanel/LeftPanelContainer/RaidWarning/RaidWarningContainer"]
layout_mode = 2
text = "3 days until raid"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RaidSize" type="Label" parent="MainContainer/LeftPanel/LeftPanelContainer/RaidWarning/RaidWarningContainer"]
layout_mode = 2
text = "10 rebels will attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="MainContainer/LeftPanel/LeftPanelContainer"]
layout_mode = 2

[node name="BaseArea" type="Control" parent="MainContainer/LeftPanel/LeftPanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="CenterPanelContainer" type="VBoxContainer" parent="MainContainer/CenterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ActionTitle" type="Label" parent="MainContainer/CenterPanel/CenterPanelContainer"]
layout_mode = 2
text = "ACTION AREA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/CenterPanel/CenterPanelContainer"]
layout_mode = 2

[node name="ActionArea" type="Control" parent="MainContainer/CenterPanel/CenterPanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TargetContainer" type="VBoxContainer" parent="MainContainer/CenterPanel/CenterPanelContainer/ActionArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0

[node name="HeadTarget" type="Button" parent="MainContainer/CenterPanel/CenterPanelContainer/ActionArea/TargetContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(200, 60)

[node name="HeadLabel" type="Label" parent="MainContainer/CenterPanel/CenterPanelContainer/ActionArea/TargetContainer/HeadTarget"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -10.0
offset_right = 30.0
offset_bottom = 10.0
text = "HEAD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChestTarget" type="Button" parent="MainContainer/CenterPanel/CenterPanelContainer/ActionArea/TargetContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(200, 60)

[node name="ChestLabel" type="Label" parent="MainContainer/CenterPanel/CenterPanelContainer/ActionArea/TargetContainer/ChestTarget"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -10.0
offset_right = 35.0
offset_bottom = 10.0
text = "CHEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LegTarget" type="Button" parent="MainContainer/CenterPanel/CenterPanelContainer/ActionArea/TargetContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(200, 60)

[node name="LegLabel" type="Label" parent="MainContainer/CenterPanel/CenterPanelContainer/ActionArea/TargetContainer/LegTarget"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -10.0
offset_right = 25.0
offset_bottom = 10.0
text = "LEG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Crosshair" type="ColorRect" parent="MainContainer/CenterPanel/CenterPanelContainer/ActionArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(1, 1, 1, 0.8)

[node name="TimerLabel" type="Label" parent="MainContainer/CenterPanel/CenterPanelContainer/ActionArea"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -50.0
offset_right = -50.0
offset_bottom = -20.0
text = "Time: 3.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0

[node name="RightPanelContainer" type="VBoxContainer" parent="MainContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="StatsTitle" type="Label" parent="MainContainer/RightPanel/RightPanelContainer"]
layout_mode = 2
text = "STATS & SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/RightPanel/RightPanelContainer"]
layout_mode = 2

[node name="PlayerStats" type="VBoxContainer" parent="MainContainer/RightPanel/RightPanelContainer"]
layout_mode = 2

[node name="HPLabel" type="Label" parent="MainContainer/RightPanel/RightPanelContainer/PlayerStats"]
layout_mode = 2
text = "HP: 100/100"

[node name="HPBar" type="ProgressBar" parent="MainContainer/RightPanel/RightPanelContainer/PlayerStats"]
layout_mode = 2
max_value = 100.0
value = 100.0

[node name="DayLabel" type="Label" parent="MainContainer/RightPanel/RightPanelContainer/PlayerStats"]
layout_mode = 2
text = "Day: 1"

[node name="HSeparator2" type="HSeparator" parent="MainContainer/RightPanel/RightPanelContainer"]
layout_mode = 2

[node name="Resources" type="VBoxContainer" parent="MainContainer/RightPanel/RightPanelContainer"]
layout_mode = 2

[node name="FoodLabel" type="Label" parent="MainContainer/RightPanel/RightPanelContainer/Resources"]
layout_mode = 2
text = "Food: 100"

[node name="MedicineLabel" type="Label" parent="MainContainer/RightPanel/RightPanelContainer/Resources"]
layout_mode = 2
text = "Medicine: 50"

[node name="MaterialsLabel" type="Label" parent="MainContainer/RightPanel/RightPanelContainer/Resources"]
layout_mode = 2
text = "Materials: 75"

[node name="HSeparator3" type="HSeparator" parent="MainContainer/RightPanel/RightPanelContainer"]
layout_mode = 2

[node name="GameControls" type="VBoxContainer" parent="MainContainer/RightPanel/RightPanelContainer"]
layout_mode = 2

[node name="PauseButton" type="Button" parent="MainContainer/RightPanel/RightPanelContainer/GameControls"]
layout_mode = 2
text = "Pause Game"

[node name="RestartButton" type="Button" parent="MainContainer/RightPanel/RightPanelContainer/GameControls"]
layout_mode = 2
text = "Restart Game"
